--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "cra-template-typescript": "1.1.2",
+    "date-fns": "^2.21.3",
+    "json-server": "^0.16.3",
+    "polished": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -21,6 +24,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "uuidv4": "^6.2.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
